@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.60 2012/06/03 20:03:50 wiz Exp $
+$NetBSD: distinfo,v 1.61 2012/07/07 21:39:47 wiz Exp $
 
-SHA1 (mercurial-2.2.3.tar.gz) = b754700c545c17f68e1ab36c942141d90c9b9b46
-RMD160 (mercurial-2.2.3.tar.gz) = 44a962017d63aaa5e586f2e3c9d772306be9e6eb
-Size (mercurial-2.2.3.tar.gz) = 3441501 bytes
+SHA1 (mercurial-2.3.tar.gz) = f5fb472500deb01677f1b2e82c7872fe06069cdb
+RMD160 (mercurial-2.3.tar.gz) = 25292dd34f7f2e670c257424137e5733ff271084
+Size (mercurial-2.3.tar.gz) = 3549002 bytes
