@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.11409 2012/08/07 16:20:08 adam Exp $
+$NetBSD: TODO,v 1.11411 2012/08/11 00:22:51 wiz Exp $
 
 Suggested new packages
 ======================
@@ -368,7 +368,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o aewm++-1.0.27
 	o afterstep-2.2.11
 	o aipo-7.0.1
-	o akonadi-1.7.2
+	o akonadi-1.8.0
 	o alacarte-0.13.2
 	o album-4.06
 	o aliados-0.2.0
@@ -523,7 +523,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o dhid-5.3
 	o diffpdf-2.1.1
 	o diffstat-1.55
-	o digikam-2.7.0
+	o digikam-2.8.0
 	o dinotrace-9.3e
 	o dinotrace-mode-9.3e
 	o doclifter-2.9
@@ -534,6 +534,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o dspam-3.10.0
 	o dvdstyler-2.2
 	o dvtm-0.7 [pkg/46585]
+	o dvtm-0.8
 	o easymenu-0.7.2p1
 	o echinus-0.4.9
 	o eclipse-3.2.0
@@ -542,7 +543,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o edonkeyclc-1.0.2 [replaces net/edonkey2k]
 	o efax-gtk-3.2.9
 	o egtk-0.3.6.2
-	o eigen3-3.0.6
+	o eigen3-3.1.1
 	o ejabberd-2.1.11
 	o ekiga-3.2.7
 	o electric-9.02
@@ -735,6 +736,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o hdf-4.2.7
 	o hdf5-1.8.9
 	o help2man-1.40.10 [pkg/46548]
+	o help2man-1.40.11
 	o hesiod-3.1.0
 	o heyu-2.9.0
 	o hiawatha-8.4
@@ -786,6 +788,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o kapooka-0.3
 	o kbiff-4.0
 	o kdbg-2.5.1
+	o kde4-4.8.5
 	o kde4-4.9
 	o kdenlive-0.9.2
 	o kdevelop-4.3.1
@@ -823,11 +826,12 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o libextractor-0.6.3
 	o libffi-3.0.11
 	o libflash-0.4.13
-	o libfolks-0.7.2.2
+	o libfolks-0.7.3
 	o libgail-gnome-1.20.4
 	o libgda-4.2.1 [GNOME 2.32]
 	o libgda-4.2.5
 	o libgdata-0.13.1
+	o libgee-0.6.5
 	o libgiigic-1.1.2
 	o libgnomedb-3.1.2
 	o libgnomekbd-3.4.0.2
@@ -848,6 +852,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o libraw-0.14.8
 	o libreoffice-3.5.5.3 [wip/libreoffice, pkg/46768]
 	o librep-0.92.2.1
+	o libspectre-0.2.7
 	o libspf2-1.2.9.1
 	o libssh-0.5.2 [www.libssh.org]
 	o libssh2-1.4.2
@@ -881,7 +886,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o manedit-1.2.1
 	o mantis-1.2.3
 	o matchbox-panel-0.9.3
-	o mathomatic-16.0.1
+	o mathomatic-16.0.2
 	o mawk-1.3.4.20120627
 	o mc-4.8.1.4
 	o mdocml-1.12.1
@@ -897,7 +902,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o mknmz-wwwoffle-0.7.2
 	o mksh-40f
 	o mkvtoolnix-5.7.0
-	o mnemosyne-2.0
+	o mnemosyne-2.0.1
 	o moc-2.4.4
 	o modular-xorg-server-1.11.2 [wip]
 	o modular-xorg-server-1.12.3
@@ -928,7 +933,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o ne-2.01
 	o nessus-4.4.1
 	o net-snmp-5.7.1
-	o netcdf-4.2.1
+	o netcdf-4.2.1.1
 	o netramet-50
 	o nettle-2.5
 	o newmail-1.0.2
@@ -945,7 +950,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o ntp-4.2.6p3
 	o ntp4-4.2.6p5
 	o nulib2-220
-	o nut-17.10
+	o nut-17.11
 	o nxtvepg-2.8.1
 	o obexftp-0.23
 	o ocaml-4.00.0
@@ -989,7 +994,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o pam-passwdqc-1.2.2
 	o paprefs-0.9.8
 	o parallel-20120622
-	o pari-2.5.1
+	o pari-2.5.2
 	o pari-galdata-2.2 [pkg/38117]
 	o parrot-4.6.0
 	o patch-2.6.1
@@ -1004,6 +1009,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o phoon-20050629
 	o photopc-3.05
 	o php-jpgraph-3.0.6
+	o phpmyadmin-3.5.2.1
 	o picp-0.6.8
 	o pim6dd-20040819a
 	o pim6sd-20040824a
@@ -1096,9 +1102,11 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o rudiments-0.36.1
 	o sabayon-2.30.1 [GNOME 2.30]
 	o sablecc-3.4
+	o samba-3.6.7
 	o sarg-2.2.5
 	o sawfish-1.9.0
 	o saxon-9.2
+	o sbcl-1.0.58
 	o scapy-2.2.0
 	o scew-0.4.0
 	o scilab-5.5.3
@@ -1251,9 +1259,11 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o wbm-cyrus-imapd-1.6.2
 	o wcalc-2.4
 	o webalizer-2.23.05
+	o webkit-gtk-1.8.2
 	o webmin-1.550 [security] [pkg/45066]
 	o webmin-1.590 [security]
 	o websvn-2.3.2
+	o wget-1.14
 	o whohas-0.29
 	o windowlab-1.40
 	o windowmaker-0.95.2 [wip]
@@ -1272,7 +1282,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o wxRemind-101
 	o wyrd-1.4.4 [pkg/43792]
 	o wyrd-1.4.5
-	o x264-devel-20120728
+	o x264-devel-20120804
 	o xanalyser-1.30
 	o xapian-1.2.12
 	o xaric-0.13.2
@@ -1305,7 +1315,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o xf86-video-glint-1.2.8
 	o xf86-video-i128-1.3.6
 	o xf86-video-i740-1.3.4
-	o xf86-video-intel-2.20.2
+	o xf86-video-intel-2.20.3
 	o xf86-video-mach64-6.9.3
 	o xf86-video-mga-1.6.1
 	o xf86-video-neomagic-1.2.7
@@ -1333,7 +1343,7 @@ For possible perl packages updates, see http://www.netbsd.org/~wiz/perl.html
 	o xfce4-4.10
 	o xfce4-volman-0.3.80
 	o xfd-1.1.1
-	o xfe-1.32.5
+	o xfe-1.33
 	o xforms-1.0.93sp1
 	o xfs-1.1.1 [wip]
 	o xhippo-3.5
